# TWSStarter

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  run.bat
src/twsstarter/: autofill.py  crypto.py  launcher.py  main.py  models.py  paths.py  process_scan.py  runtime_monitor.py  storage.py  tracing.py  version.py
src/twsstarter/i18n/: __init__.py  strings.py
src/twsstarter/resources/: exe_icons.py  flags.py  help_images.py  icon.py
src/twsstarter/ui/: about_dialog.py  connection_card.py  connection_dialog.py  disclaimer_dialog.py  help_browser.py  help_dialog.py  main_window.py  settings_dialog.py  theme.py  trace_panel.py
